--- a/01-links/team-decide/web/index.html
+++ b/01-links/team-decide/web/index.html
@@ -2,9 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link  rel="stylesheet" href="./static/tailwind.min.css" />
 </head>
-<body>
-    ciao decide
+<body class="h-screen w-screen bg-gray-900  border border-8 border-green-400">
+
+<img src="./static/logo.png" class="w-32"/>
+
+<ul class="flex items-center">
+    <li class="p-2">
+        <a href="ace-ventura.html" class="flex flex-col items-center justify-center">
+            <img src="https://m.media-amazon.com/images/M/MV5BYmVhNmFmOGYtZjgwNi00ZGQ0LThiMmQtOGZjMDUzNzJhMGIzXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jpg"
+                 class="w-32 rounded-lg shadow-lg"/>
+            <div class="text-gray-300 text-center mt-3">
+                Ace Ventura: Pet Detective
+            </div>
+        </a>
+    </li>
+
+    <li class="p-2">
+        <a href="greyfriers.html" class="flex flex-col items-center justify-center">
+            <img src="https://m.media-amazon.com/images/M/MV5BNTU0ZmY0YTctNDJjNS00ZjYyLTg2NTUtNzA3Y2Y1M2RmZjgyXkEyXkFqcGdeQXVyMTQ3Njg3MQ@@._V1_SX300.jpg"
+                 class="w-32 rounded-lg shadow-lg"/>
+            <div class="text-gray-300 text-center mt-3">
+                The adventures of greyfriars bobby
+            </div>
+        </a>
+    </li>
+</ul>
+
 </body>
 </html>
