--- a/01-links/team-decide/web/ace-ventura.html
+++ b/01-links/team-decide/web/ace-ventura.html
@@ -11,14 +11,7 @@
 <img src="./static/logo.png" class="w-32"/>
 
 
-<div class="p-2">
-    <img src="https://m.media-amazon.com/images/M/MV5BYmVhNmFmOGYtZjgwNi00ZGQ0LThiMmQtOGZjMDUzNzJhMGIzXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jpg"
-         class="w-32 rounded-lg shadow-lg"/>
-    <div class="text-gray-300 text-center mt-3">
-        Ace Ventura: Pet Detective
-    </div>
-</div>
-
+<iframe src="http://localhost:91/ace-ventura.html" width="300px" height="600px"></iframe>
 
 </body>
 </html>
