--- a/01-links/team-decide/web/greyfriers.html
+++ b/01-links/team-decide/web/greyfriers.html
@@ -11,13 +11,7 @@
 <img src="./static/logo.png" class="w-32"/>
 
 
-<div class="p-2">
-    <img src="https://m.media-amazon.com/images/M/MV5BNTU0ZmY0YTctNDJjNS00ZjYyLTg2NTUtNzA3Y2Y1M2RmZjgyXkEyXkFqcGdeQXVyMTQ3Njg3MQ@@._V1_SX300.jpg"
-         class="w-32 rounded-lg shadow-lg"/>
-    <div class="text-gray-300 text-center mt-3">
-        The Adventures of Greyfriars Bobby
-    </div>
-</div>
+<iframe src="http://localhost:91/greyfriers.html" width="300px" height="600px"></iframe>
 
 
 </body>
