--- a/01-links/team-decide/web/films/greyfriers.html
+++ b/01-links/team-decide/web/films/greyfriers.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link  rel="stylesheet" href="./static/tailwind.min.css" />
+    <link  rel="stylesheet" href="../decide/static/tailwind.min.css" />
 </head>
 <body class="h-screen w-screen bg-gray-900">
 
-<img src="./static/logo.png" class="w-32"/>
+<img src="../decide/static/logo.png" class="w-32"/>
 
 
 <iframe src="http://localhost:91/greyfriers.html" width="300px" height="600px"></iframe>
