--- a/01-links/team-decide/web/films/index.html
+++ b/01-links/team-decide/web/films/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link  rel="stylesheet" href="./static/tailwind.min.css" />
+    <link  rel="stylesheet" href="/decide/static/tailwind.min.css"/>
 </head>
 <body class="h-screen w-screen bg-gray-900  border border-8 border-green-400">
 
-<img src="./static/logo.png" class="w-32"/>
+<img src="/decide/static/logo.png" class="w-32"/>
 
 <ul class="flex items-center">
     <li class="p-2">
