--- a/01-links/team-inspire/web/recomendations/greyfriers.html
+++ b/01-links/team-inspire/web/recomendations/greyfriers.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link  rel="stylesheet" href="./static/tailwind.min.css" />
+    <link  rel="stylesheet" href="/inspire/static/tailwind.min.css" />
 </head>
 <body class="h-screen w-screen bg-gray-900 border border-8 border-green-400">
 
-<img src="./static/logo.png" class="w-32"/>
+<img src="/inspire/static/logo.png" class="w-32"/>
 
 <h1 class="text-white text-xl uppercase">Puoi anche vedere:</h1>
 
